cable create and list in gonetbox
