# pkg/tool/gonetboxd/generated/server/openapi.yaml
@@ -1178,6 +1178,47 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /api/v1/cables:
+    get:
+      operationId: listCables
+      responses:
+        "200":
+          description: All cables.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  nullable: true
+                  allOf:
+                  - $ref: "#/components/schemas/Cable"
+        "500":
+          description: Failed to list cables.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+    post:
+      operationId: createCable
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateCableRequest"
+      responses:
+        "201":
+          description: Created cable.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Cable"
+        "500":
+          description: Failed to create cable.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
   /api/v1/tunnel-terminations:
     get:
       operationId: listTunnelTerminations
@@ -2251,6 +2292,45 @@ components:
           format: int32
         name:
           type: string
+    Cable:
+      type: object
+      required:
+      - identifier
+      - name
+      properties:
+        identifier:
+          type: integer
+          format: int32
+        name:
+          type: string
+        status:
+          type: string
+        sideA:
+          type: string
+        sideB:
+          type: string
+        link:
+          type: string
+    CreateCableRequest:
+      type: object
+      required:
+      - deviceA
+      - interfaceA
+      - deviceB
+      - interfaceB
+      properties:
+        deviceA:
+          type: string
+          description: Device name on side A.
+        interfaceA:
+          type: string
+          description: Interface name on side A.
+        deviceB:
+          type: string
+          description: Device name on side B.
+        interfaceB:
+          type: string
+          description: Interface name on side B.
     Tunnel:
       type: object
       required:
